<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="user_hint">Enter username</string>
    <string name="pass_hint">Enter password</string>
    <string name="text_total_Expenses">Total Expenses: </string>

    <string name="my_set_file">My_Settings</string>


    <string name="exp_type_title">Expense Category</string>
    <string-array name="expense_type">
        <item>Housing</item>
        <item>Transportation</item>
        <item>Utilities</item>
        <item>Food</item>
        <item>Entertainment</item>
        <item>Other</item>
    </string-array>
    <string name="business">Business Name</string>
    <string name="amount">Expense Amount</string>
    <string name="description">Expense Description</string>
    <string name="bus_hint">The business paid</string>
    <string name="amount_hint">The amount paid</string>
    <string name="desc_hint">What you bought/paid for</string>
    <string name="add_btn">Add Expense</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>